tests/fixtures/invalid/abs_bytes.py
# Cannot call abs() with Bytes
x = abs(b"hello")
